[package]
name = "nasne_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version= "1.0.149", features = ["derive"] }
serde_json = "1.0.116"
actix-web = "4"
anyhow = "1.0.66"
string-builder = "0.2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
